Fix drop down active color contrast

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -347,6 +347,8 @@ a,
 	color: #57086c !important;
 }
 
+#s-lg-tabs-container .dropdown-menu > li.active > a,
+#s-lg-tabs-container .dropdown-menu > li.active > a:hover,
 #s-lg-tabs-container .dropdown-menu > li > a:hover {
 	color: #ffffff !important;
 }
